custom data screen & navigation bar show/hide

--- a/Apps/APN-UIKit/APN UIKit/APN UIKit/Base.lproj/Main.storyboard
+++ b/Apps/APN-UIKit/APN UIKit/APN UIKit/Base.lproj/Main.storyboard
@@ -262,10 +262,10 @@
             </objects>
             <point key="canvasLocation" x="1810.7692307692307" y="3.5545023696682461"/>
         </scene>
-        <!--View Controller-->
+        <!--Custom Data View Controller-->
         <scene sceneID="t67-bo-mFN">
             <objects>
-                <viewController id="L6G-xX-ThQ" customClass="ViewController" customModule="APN_UIKit" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="CustomDataViewController" id="L6G-xX-ThQ" customClass="CustomDataViewController" customModule="APN_UIKit" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="pPA-Gl-4wa">
                         <rect key="frame" x="0.0" y="0.0" width="390" height="844"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
