--- a/Apps/APN-UIKit/APN UIKit/APN UIKit/Base.lproj/Main.storyboard
+++ b/Apps/APN-UIKit/APN UIKit/APN UIKit/Base.lproj/Main.storyboard
@@ -87,15 +87,13 @@
                                     <constraint firstItem="IaH-JL-VQC" firstAttribute="trailing" secondItem="GCe-Ns-Vy3" secondAttribute="trailing" id="vdU-lA-a7c"/>
                                 </constraints>
                             </view>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="E02-J2-b7Z">
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="settings" translatesAutoresizingMaskIntoConstraints="NO" id="HPL-cE-0Qb">
                                 <rect key="frame" x="320" y="67" width="50" height="50"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="50" id="UaU-os-qv0"/>
-                                    <constraint firstAttribute="width" constant="50" id="ZaK-VK-vmJ"/>
+                                    <constraint firstAttribute="height" constant="50" id="5wR-Cr-URF"/>
+                                    <constraint firstAttribute="width" constant="50" id="J4G-Bk-vVW"/>
                                 </constraints>
-                                <state key="normal" title="Button"/>
-                                <buttonConfiguration key="configuration" style="plain" title="Set"/>
-                            </button>
+                            </imageView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
@@ -107,9 +105,9 @@
                             <constraint firstItem="n6J-Nq-8NP" firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="WZv-T2-RIj" secondAttribute="trailing" id="94N-1a-Igr"/>
                             <constraint firstItem="RG6-zo-pd6" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="DJt-uO-TkY"/>
                             <constraint firstItem="WZv-T2-RIj" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="80" id="Gog-90-fBk"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="E02-J2-b7Z" secondAttribute="trailing" constant="20" id="Ten-MD-JIh"/>
                             <constraint firstItem="n6J-Nq-8NP" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="239.33333333333334" id="cGY-fV-m54"/>
-                            <constraint firstItem="E02-J2-b7Z" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="20" id="wiC-gA-TM8"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="HPL-cE-0Qb" secondAttribute="trailing" constant="20" id="vh3-4B-ct0"/>
+                            <constraint firstItem="HPL-cE-0Qb" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="20" id="wbM-7D-TgK"/>
                             <constraint firstItem="WZv-T2-RIj" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="zxf-xX-O8v"/>
                         </constraints>
                     </view>
@@ -154,14 +152,6 @@
                                 <color key="textColor" red="0.24313725489999999" green="0.24313725489999999" blue="0.24313725489999999" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bDP-3o-JQx">
-                                <rect key="frame" x="320.33333333333331" y="67" width="49.666666666666686" height="50"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="50" id="cdN-vz-qDS"/>
-                                </constraints>
-                                <state key="normal" title="Button"/>
-                                <buttonConfiguration key="configuration" style="plain" title="Set"/>
-                            </button>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="equalCentering" alignment="center" spacing="16" translatesAutoresizingMaskIntoConstraints="NO" id="AIH-WX-Xne">
                                 <rect key="frame" x="20" y="265" width="350" height="314"/>
                                 <subviews>
@@ -239,19 +229,25 @@
                                     <constraint firstItem="nOP-Lf-TEx" firstAttribute="height" secondItem="yOE-0O-ICW" secondAttribute="height" id="hbR-2v-zvE"/>
                                 </constraints>
                             </stackView>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="settings" translatesAutoresizingMaskIntoConstraints="NO" id="Kn0-pQ-K5D">
+                                <rect key="frame" x="320" y="67" width="50" height="50"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="50" id="GeO-jX-KKr"/>
+                                    <constraint firstAttribute="width" constant="50" id="eza-2G-gKT"/>
+                                </constraints>
+                            </imageView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="QCK-Bh-SyG"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
                             <constraint firstItem="gm6-Cg-tg6" firstAttribute="leading" secondItem="QCK-Bh-SyG" secondAttribute="leading" constant="10" id="9XZ-N2-MTn"/>
+                            <constraint firstItem="Kn0-pQ-K5D" firstAttribute="top" secondItem="QCK-Bh-SyG" secondAttribute="top" constant="20" id="Axs-iq-bOs"/>
                             <constraint firstItem="QCK-Bh-SyG" firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="gm6-Cg-tg6" secondAttribute="trailing" id="B9V-Qh-5ZD"/>
                             <constraint firstItem="QCK-Bh-SyG" firstAttribute="trailing" secondItem="AIH-WX-Xne" secondAttribute="trailing" constant="20" id="CMu-3h-LVK"/>
+                            <constraint firstItem="QCK-Bh-SyG" firstAttribute="trailing" secondItem="Kn0-pQ-K5D" secondAttribute="trailing" constant="20" id="CpS-M0-Pil"/>
                             <constraint firstItem="AIH-WX-Xne" firstAttribute="centerX" secondItem="LR0-48-7RQ" secondAttribute="centerX" id="Df6-LA-cyo"/>
                             <constraint firstItem="AIH-WX-Xne" firstAttribute="centerY" secondItem="LR0-48-7RQ" secondAttribute="centerY" id="FYN-MZ-pSL"/>
                             <constraint firstItem="AIH-WX-Xne" firstAttribute="leading" secondItem="QCK-Bh-SyG" secondAttribute="leading" constant="20" id="T5c-wP-91S"/>
-                            <constraint firstItem="QCK-Bh-SyG" firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="bDP-3o-JQx" secondAttribute="trailing" id="bPm-QH-7BB"/>
-                            <constraint firstItem="bDP-3o-JQx" firstAttribute="top" secondItem="QCK-Bh-SyG" secondAttribute="top" constant="20" id="e8X-x5-rlc"/>
-                            <constraint firstItem="bDP-3o-JQx" firstAttribute="leading" secondItem="QCK-Bh-SyG" secondAttribute="leading" constant="320.33333333333331" id="meR-2i-M0L"/>
                             <constraint firstItem="AIH-WX-Xne" firstAttribute="top" secondItem="gm6-Cg-tg6" secondAttribute="bottom" constant="40" id="rcs-MH-dX9"/>
                             <constraint firstItem="gm6-Cg-tg6" firstAttribute="centerX" secondItem="LR0-48-7RQ" secondAttribute="centerX" id="sj0-My-pz5"/>
                         </constraints>
@@ -396,6 +392,7 @@
         </scene>
     </scenes>
     <resources>
+        <image name="settings" width="512" height="512"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
